# pact-showcase

./: LICENSE  Makefile  README.md
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/tests/: base_spec.py  conftest.py  orm_spec.py
backend/todo/: base.py  db.py  orm.py
backend/todoapp/: __init__.py  app.py  db.py  orm.py
frontend/: .gitignore  package.json  tsconfig.json
frontend/src/: ApiClient.ts  apiClient.js  index.js
frontend/test/: common.js
frontend/test/pact/: apiClient.spec.js
